<resources>
    <string name="app_name">Domestic Health Tourism</string>
    <string name="hello">Hello</string>
    <string name="login">Login</string>
    <string name="server_ip_address">Server IP Address</string>
    <string name="ip_dialog_content">Please enter the running MVC project ip address with port</string>
    <string name="ok">OK</string>
    <string name="ip_not_correct">Ip Address is not correct</string>
    <string name="system_running_on_url">System is running on %s</string>
    <string name="tc_number">T.C. Number</string>
    <string name="password">Password</string>
    <string name="password_not_changed">Password (not changed)</string>
    <string name="register_link">No account yet? Create one</string>
    <string name="register">Register</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="re_password">Re-Password (not changed)</string>
    <string name="re_password_not_changed">Re-Password (not changed)</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="enter_all_fields">Please enter all fields</string>
    <string name="tc_must_be_11">Your TC number must be 11 digits</string>
    <string name="enter_tc_password">Please enter TC number and password</string>
    <string name="passwords_not_matching">Your password are not matching</string>
    <string name="hello_user">Hello, %s %s</string>
    <string name="there_is_error">There is an error</string>
    <string name="make_appoinment">Make Appoinment</string>
    <string name="select_city">Select City</string>
    <string name="loading">Loading...</string>
    <string name="select_district">Select District</string>
    <string name="select_hospital">Select Hospital</string>
    <string name="select_clinic">Select Clinic</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="appoinment_date">Appoinment Date</string>
    <string name="select">Select</string>
    <string name="select_doctor_and_date">Please select doctor and appoinment date</string>
    <string name="my_appoinments">My Appoinments</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="update_my_profile">Update My Profile</string>
    <string name="registered_successfully">You are successfully registered</string>
    <string name="appoinments">Appoinments</string>
    <string name="update_success">Successfully updated</string>
    <string name="appoinment_time_not_suitable">This appoinment time is not suitable</string>
    <string name="appoinment_success">Appoinment is successfull</string>
    <string name="try_again">Try again</string>
    <string name="past_appoinment_cant_cancel">You can not cancel past appoinment !</string>
    <string name="appoinment_is_canceled">Your appoinment is canceled</string>
    <string name="appoinment_not_cancelled">Your appoinment is not canceled</string>
    <string name="loc_permission">You should give location permission</string>
</resources>
