<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuMakeAppoinment"
        android:orderInCategory="100"
        android:title="@string/make_appoinment"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuMyAppoinments"
        android:orderInCategory="200"
        android:title="@string/my_appoinments"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuProfile"
        android:orderInCategory="200"
        android:title="@string/profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuLogout"
        android:orderInCategory="200"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>